--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,4 @@ eframe = { version = "0.19.0", features = ["persistence"] }
 egui_node_graph = { version = "0.4.0", features = ["persistence"] }
 anyhow = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-pipewire = "0.5.0"
+pipewire = { path = "./thirdparty/pipewire-rs/pipewire" }
