--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ rust-version = "1.56"
 
 [dependencies]
 eframe = { version = "0.19.0", features = ["persistence"] }
+egui_extras = { version = "0.19.0" }
 egui_node_graph = { version = "0.4.0", features = ["persistence"] }
 anyhow = "1.0"
 serde = { version = "1.0", features = ["derive"] }
