--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,6 @@ jobs:
           toolchain: 1.65.0
       - uses: Swatinem/rust-cache@v2
       - name: install deps
-        run: sudo apt-get update && sudo apt-get install -y --no-install-recommends libclang-dev pipewire-audio-client-libraries
+        run: sudo apt-get update && sudo apt-get install -y --no-install-recommends libclang-dev libspa-0.2-dev libpipewire-0.3-dev
       - run: cargo fmt --check
       - run: cargo build
